@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -31,7 +30,9 @@ class JsonAdaptedPerson {
     private final String address;
     private final String appointment;
     private final JsonAdaptedEmergencyPerson emergencyContact;
-    private final List<JsonAdaptedTag> tags = new ArrayList<>();
+    private final List<JsonAdaptedTag> allergyTags = new ArrayList<>();
+    private final List<JsonAdaptedTag> conditionTags = new ArrayList<>();
+    private final List<JsonAdaptedTag> insuranceTags = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
@@ -39,16 +40,23 @@ class JsonAdaptedPerson {
     @JsonCreator
     public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
             @JsonProperty("email") String email, @JsonProperty("address") String address,
-            @JsonProperty("tags") List<JsonAdaptedTag> tags, @JsonProperty("appointment") String appointment,
-            @JsonProperty("emergencyContact") JsonAdaptedEmergencyPerson emergencyContact) {
+            @JsonProperty("allergyTags") List<JsonAdaptedTag> allergyTags,
+            @JsonProperty("conditionTags") List<JsonAdaptedTag> conditionTags, @JsonProperty("insuranceTags") List<JsonAdaptedTag> insuranceTags,
+            @JsonProperty("appointment") String appointment, @JsonProperty("emergencyContact") JsonAdaptedEmergencyPerson emergencyContact) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
         this.appointment = appointment;
         this.emergencyContact = emergencyContact;
-        if (tags != null) {
-            this.tags.addAll(tags);
+        if (allergyTags != null) {
+            this.allergyTags.addAll(allergyTags);
+        }
+        if (conditionTags != null) {
+            this.conditionTags.addAll(conditionTags);
+        }
+        if (insuranceTags != null) {
+            this.insuranceTags.addAll(insuranceTags);
         }
     }
 
@@ -62,9 +70,15 @@ class JsonAdaptedPerson {
         address = source.getAddress().toString();
         appointment = source.getAppointment().toString();
         emergencyContact = new JsonAdaptedEmergencyPerson(source.getEmergencyContact());
-        tags.addAll(source.getTags().stream()
+        allergyTags.addAll(source.getAllergyTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
+        conditionTags.addAll(source.getConditionTags().stream()
+                .map(JsonAdaptedTag::new)
+                .toList());
+        insuranceTags.addAll(source.getInsuranceTags().stream()
+                .map(JsonAdaptedTag::new)
+                .toList());
     }
 
     /**
@@ -73,10 +87,28 @@ class JsonAdaptedPerson {
      * @throws IllegalValueException if there were any data constraints violated in the adapted person.
      */
     public Person toModelType() throws IllegalValueException {
-        final List<Tag> personTags = new ArrayList<>();
-        for (JsonAdaptedTag tag : tags) {
-            personTags.add(tag.toModelType());
+
+        final List<Tag> allergyTags = new ArrayList<>();
+        for (JsonAdaptedTag tag: this.allergyTags) {
+            allergyTags.add(tag.toModelType());
         }
+
+        final Set<Tag> modelAllergyTags = new HashSet<>(allergyTags);
+
+        final List<Tag> conditionTags = new ArrayList<>();
+        for (JsonAdaptedTag tag: this.conditionTags) {
+            conditionTags.add(tag.toModelType());
+        }
+
+        final Set<Tag> modelConditionTags = new HashSet<>(conditionTags);
+
+
+        final List<Tag> insuranceTags = new ArrayList<>();
+        for (JsonAdaptedTag tag: this.insuranceTags) {
+            insuranceTags.add(tag.toModelType());
+        }
+
+        final Set<Tag> modelInsuranceTags = new HashSet<>(insuranceTags);
 
         if (name == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Name.class.getSimpleName()));
@@ -120,9 +152,7 @@ class JsonAdaptedPerson {
         }
         final Appointment modelAppointment = new Appointment(appointment);
 
-        final Set<Tag> modelTags = new HashSet<>(personTags);
-
-        Person person = new Person(modelName, modelPhone, modelEmail, modelAddress, modelTags, modelAppointment, null);
+        Person person = new Person(modelName, modelPhone, modelEmail, modelAddress, modelAllergyTags, modelConditionTags, modelInsuranceTags, modelAppointment, null);
 
         if (emergencyContact != null) {
             return person.setEmergencyContact(emergencyContact.toModelType());
